force-app/main/default/objects/Project_Activity__c/Project_Activity__c.object-meta.xml
<CustomObject>
    <label>Project Activity</label>
    <nameField>
        <displayFormat>ACT-{00000}</displayFormat>
        <label>Project Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>