force-app/main/default/objects/Project_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Development</fullName><default>false</default><label>Development</label></value>
            <value><fullName>QA</fullName><default>false</default><label>QA</label></value>
            <value><fullName>BA</fullName><default>false</default><label>BA</label></value>
            <value><fullName>Design</fullName><default>false</default><label>Design</label></value>
            <value><fullName>DevOps</fullName><default>false</default><label>DevOps</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>