force-app/main/default/objects/Project_Activity__c/fields/Activity_Updates__c.field-meta.xml
<CustomField>
    <fullName>Activity_Updates__c</fullName>
    <label>Activity Updates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>