force-app/main/default/objects/Project_Activity__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Project Activities (Assigned To)</relationshipLabel>
    <relationshipName>Project_Activities_Assigned_To</relationshipName>
    <type>Lookup</type>
</CustomField>