force-app/main/default/objects/Project_Activity__c/fields/Estimated_Mandays__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Mandays__c</fullName>
    <label>Estimated Mandays</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>