force-app/main/default/objects/Project_Activity__c/fields/Project_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Project_Sprint__c</fullName>
    <label>Project Sprint</label>
    <referenceTo>Project_Sprint__c</referenceTo>
    <relationshipLabel>Project Activities</relationshipLabel>
    <relationshipName>Project_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>