force-app/main/default/objects/Project_Activity__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Project Activities (Reviewer)</relationshipLabel>
    <relationshipName>Project_Activities_Reviewer</relationshipName>
    <type>Lookup</type>
</CustomField>