force-app/main/default/objects/Project_Activity__c/recordTypes/VISEO_Project_Activity.recordType-meta.xml
<RecordType>
    <fullName>VISEO_Project_Activity</fullName>
    <active>true</active>
    <label>VISEO Project Activity</label>
</RecordType>